--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -29,13 +29,16 @@
   }
 
   @include mobile{
-    width: 70%;
+    width: 71.6%;
     height: 144px;
+    padding-top: 0;
+    padding-bottom: 0;
+    justify-content: space-around;
     h1{
       text-align: center;
       width: 320px;
       font-size: 24px;
-      margin-top: -5px;
+      margin-top: -3px;
       margin-bottom: 30px;
     }
   }
