--- a/src/Components/UI/Input/_Input.scss
+++ b/src/Components/UI/Input/_Input.scss
@@ -27,24 +27,35 @@ $border-button-width: 0.5px;
     position: absolute;
     margin-left: 11% ;
     margin-top: 9px;
+    @include mobile{
+      width: 20px;
+      height: 20px;
+      margin-left: 2%;
+      margin-top: 0;
+    }
   }
   @include mobile{
+    width: 117.5%;
     margin-top: -50px;
   }
 
   label{
     width: 90%;
     margin-left: 5%;
+    @include mobile{
+      width: 100%;
+      margin: 0;
+    }
   }
 
   input[type="text"]{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     gap: 16px;
     height: 48px;
-    //padding: 6px 50px;
-    //width: 430px;
+
     padding: 6px 0;
     padding-left: 7.25%;
     width: 64.3%;
@@ -58,11 +69,13 @@ $border-button-width: 0.5px;
       text-align: center;
     }
     @include mobile{
-      width: 280px;
+      box-sizing: border-box;
+      width: 100%;
       height: 30px;
-      padding: 6px 12px;
+      padding: 0 30px 0 30px;
       font-size: 12px;
-      text-align: center;
+      margin: 0 0 0 0;
+      letter-spacing: 1.29px;
     }
 
 
