--- a/src/Styles/Style.css
+++ b/src/Styles/Style.css
@@ -220,7 +220,16 @@
   margin-top: 9px;
 }
 @media screen and (max-width: 600px) {
+  .header_search img {
+    width: 20px;
+    height: 20px;
+    margin-left: 2%;
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 600px) {
   .header_search {
+    width: 117.5%;
     margin-top: -50px;
   }
 }
@@ -228,10 +237,17 @@
   width: 90%;
   margin-left: 5%;
 }
+@media screen and (max-width: 600px) {
+  .header_search label {
+    width: 100%;
+    margin: 0;
+  }
+}
 .header_search input[type=text] {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   gap: 16px;
   height: 48px;
   padding: 6px 0;
@@ -249,11 +265,13 @@
 }
 @media screen and (max-width: 600px) {
   .header_search input[type=text] {
-    width: 280px;
+    box-sizing: border-box;
+    width: 100%;
     height: 30px;
-    padding: 6px 12px;
+    padding: 0 30px 0 30px;
     font-size: 12px;
-    text-align: center;
+    margin: 0 0 0 0;
+    letter-spacing: 1.29px;
   }
 }
 
@@ -677,14 +695,17 @@
 }
 @media screen and (max-width: 600px) {
   .main_header {
-    width: 70%;
+    width: 71.6%;
     height: 144px;
+    padding-top: 0;
+    padding-bottom: 0;
+    justify-content: space-around;
   }
   .main_header h1 {
     text-align: center;
     width: 320px;
     font-size: 24px;
-    margin-top: -5px;
+    margin-top: -3px;
     margin-bottom: 30px;
   }
 }
@@ -699,15 +720,18 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin-left: 8.819444444%;
-  width: 82.36111111%;
   margin-left: 8.25%;
   width: 83.5%;
 }
 @media screen and (max-width: 600px) {
   .navbar {
-    width: 90%;
-    margin-left: 5%;
+    box-sizing: border-box;
+    height: 46px;
+    width: 100%;
+    top: 0;
+    margin-left: 0;
+    padding-left: 6.4%;
+    padding-right: 6.4%;
   }
 }
 .navbar NavLink, .navbar a {
@@ -742,6 +766,8 @@
 @media screen and (max-width: 600px) {
   .navbar .left_nav .main_link img {
     margin: 0;
+    width: 33px;
+    height: 33px;
   }
 }
 .navbar .left_nav .secondary_link {
@@ -769,6 +795,12 @@
 }
 .navbar .right_nav NavLink, .navbar .right_nav a {
   margin-left: 1%;
+}
+@media screen and (max-width: 600px) {
+  .navbar .right_nav img {
+    width: 20px;
+    height: 20px;
+  }
 }
 .navbar .right_nav .search_logo {
   z-index: 1;
@@ -811,11 +843,11 @@
 @media screen and (max-width: 600px) {
   .mobile_overlay_menu {
     opacity: 0;
-    z-index: -2;
-    transition: 0.5s;
-    padding-top: 50px;
+    transition-property: height, opacity;
+    transition-duration: 0.5s;
     top: 0;
-    padding-left: 30px;
+    padding-top: 15px;
+    padding-left: 5.3%;
     justify-content: space-between;
     display: flex;
     flex-direction: column;
@@ -824,9 +856,14 @@
     width: 100%;
     background-color: rgb(255, 255, 255);
   }
+  .mobile_overlay_menu img {
+    margin-left: 1.1%;
+  }
   .mobile_overlay_menu NavLink, .mobile_overlay_menu a {
+    text-decoration: none;
+    color: inherit;
     text-transform: capitalize;
-    font-size: 32px;
+    font-size: 18px;
     font-weight: 200;
     letter-spacing: 1.92px;
   }
@@ -840,10 +877,9 @@
     justify-content: space-evenly;
   }
   .mobile_overlay_menu .mobile_menu_line {
-    margin-left: -30px;
+    margin-left: -5.3%;
     height: 0;
-    border: 1px solid black;
-    color: black;
+    border: 1px solid #F2F2F2;
     width: 100%;
   }
 }
