--- a/src/Components/Icons/_Icons.scss
+++ b/src/Components/Icons/_Icons.scss
@@ -1,28 +1,40 @@
-.icons_section{
+.icons_section {
   width: 100%;
   justify-content: flex-start;
   align-items: center;
-  gap:32px;
+  gap: 32px;
   height: 265px;
   background-color: #FAFAFA;
   margin-bottom: 105px;
   padding-bottom: -20px;
 
-  h2{
+
+  h2 {
     margin-top: 35px;
+  }
+
+  @include mobile {
+    margin-top: 46px;
+    height: 584px;
+    h2{
+      font-size: 18px;
+    }
   }
 
 }
 
-.icons_card{
+.icons_card {
   margin-top: -23px;
-
   width: 30%;
   justify-content: space-between;
+  @include mobile {
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-around;
+  }
 }
 
-.icon_frame{
-  justify-content: center;
+.icon_frame {
   align-items: center;
   height: 120px;
   justify-content: space-between;
