--- a/src/Components/Cart/_SideCart.scss
+++ b/src/Components/Cart/_SideCart.scss
@@ -30,4 +30,27 @@
     opacity: 0.5;
 
   }
+
+  @include mobile{
+    top: 64px;
+    width: 100%;
+    height: 218px;
+    img{
+      position: absolute;
+      left: 167px;
+      top:63px;
+      width: 45px ;
+      opacity: 0.5;
+    }
+    p{
+      left: 117px;
+      bottom: 45px;
+      width: 145px;
+      opacity: 0.5;
+
+    }
+    .secondary_button{
+      display: none;
+    }
+  }
 }
