--- a/src/Components/Dishes/_Dish.scss
+++ b/src/Components/Dishes/_Dish.scss
@@ -1,8 +1,9 @@
-@mixin dishContent($dishInfoHeight, $dishPrimaryFontSize, $dishSecondaryFontSize, $dishSecondaryFontPadding, $dishInfoLine){
+@mixin dishContent($dishInfoHeight, $dishPrimaryFontSize, $dishSecondaryFontSize,$dishPrimaryFontPadding, $dishSecondaryFontPadding, $dishInfoLine){
   display: flex;
   flex-direction: column;
-  padding: 0;
+  //padding: 0;
   .dish_info {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     background-color: #F9F4EA;
@@ -10,9 +11,14 @@
     height: $dishInfoHeight;
     justify-content: space-between;
     align-items: center;
-    align-self: stretch;
+    @include mobile{
+      align-items: flex-start;
+      padding-left: 16px;
+    }
+    //align-self: stretch;
     padding: 24px 0 8px;
     gap: 8px;
+
     .dish_text{
       display: flex;
       flex-direction: column;
@@ -21,12 +27,17 @@
         font-size: $dishPrimaryFontSize;
         letter-spacing: 2.67px;
         font-weight: 400;
-        padding: 0 55px 20px 55px;
+        padding: $dishPrimaryFontPadding;
         text-align: center;
+
       }
       .dish_text_secondary {
         margin-top: -15px;
         text-align: center;
+
+        @include mobile{
+          text-align: left;
+        }
         font-size: $dishSecondaryFontSize;
         letter-spacing: 1.97px;
         font-weight: 200;
@@ -34,17 +45,24 @@
       }
     }
     .dish_price {
+
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
       align-items: center;
       width: 287px;
+      @include mobile{
+        width: auto;
+      }
       height: 30px;
       .dish_text_price {
         display: flex;
         font-size: $dishSecondaryFontSize;
         letter-spacing: 1.97px;
         font-weight: 200;
+        @include mobile{
+          font-weight: 400;
+        }
         gap: 4px;
       }
       .dish_line {
@@ -58,18 +76,32 @@
 .dish_big {
   width: 360px;
   height: 645px;
-  @include dishContent(364px, 40px, 24px, 0 30px, 112px);
+  @include dishContent(364px, 40px, 24px, 0 55px 20px 55px, 0 30px, 112px);
 }
 .dish_small {
   width: 272px;
   height: 413px;
-  @include dishContent(240.27px, 24px, 20px, 0 15px 20px 15px, 82.5px);
+  @include dishContent(240.27px, 24px, 20px,0 55px 20px 55px, 0 15px 20px 15px, 82.5px);
 }
 
 .dish_signature{
   width: 380px;
   height: 645px;
-  @include dishContent(364px, 40px, 24px, 0 30px, 112px);
+  @include dishContent(364px, 40px, 24px, 0 55px 20px 55px, 0 30px, 112px);
+  @include mobile{
+    width: 245px;
+    height: 100%;
+    padding-left: 20px;
+    padding-right: 4px;
+    @include dishContent(236px, 18px, 16px, 0 0 20px 0, 0 0 0 0, 0);
+    .dish_text{
+      align-items: flex-start;
+    }
+    .dish_price{
+      padding-bottom: 10px;
+    }
+
+  }
 
   //.dish_image{
   //  width: 380px;
@@ -82,7 +114,6 @@
 .dish_props{
   height: 100%;
   display: flex;
-  align-items: flex-end;
   img{
     width: 40px;
   }
