--- a/src/Components/Header/_Navigation.scss
+++ b/src/Components/Header/_Navigation.scss
@@ -91,6 +91,14 @@
       margin-left: 1%;
     }
     @include mobile{
+      .vertical_line{
+        display: none;
+      }
+      NavLink, a{
+        padding-right: 0;
+        padding-left: 20px;
+      }
+
       img{
         width: 20px;
         height: 20px;
@@ -134,8 +142,10 @@
 
 
 .mobile_overlay_menu{
+  pointer-events: none;
+
   display: none;
-  height: 0%;
+  height: 0;
   transition: 0.5s;
   @include mobile{
 
@@ -150,7 +160,7 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    height: 0%;
+    height: 0;
     width: 100%;
     background-color: rgb(255, 255, 255);
     img{
