--- a/src/Components/UI/Input/_Input.scss
+++ b/src/Components/UI/Input/_Input.scss
@@ -1,7 +1,12 @@
 $border-button-width: 0.5px;
 .search_bar{
-
   margin-right: -45px;
+  img{
+    display: none;
+  }
+  h1{
+    display: none;
+  }
   input[type="text"]{
     box-sizing: border-box;
     display: flex;
@@ -15,7 +20,33 @@ $border-button-width: 0.5px;
     letter-spacing: 1.29px;
     font-weight: 200;
   }
+@include mobile{
+  position: fixed;
+  top:0;
+  left: 0;
+  height: 413px;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #ffffff;
+  img{
+    display: block;
+    position: fixed;
+    top:15px;
+    left:20px;
+  }
+  h1{
+    display: block;
+    margin-top: 10px;
+    text-align: center;
+  }
 
+  input[type="text"]{
+    width: 100%;
+  }
+
+
+}
 }
 
 .header_search{
@@ -23,6 +54,14 @@ $border-button-width: 0.5px;
   display: flex;
   align-items: center;
   margin-top: 14px;
+  .header{
+    h1{
+      display: none;
+    }
+    img{
+      display: none;
+    }
+  }
   img{
     position: absolute;
     margin-left: 11% ;
@@ -30,7 +69,7 @@ $border-button-width: 0.5px;
     @include mobile{
       width: 20px;
       height: 20px;
-      margin-left: 2%;
+      margin-left: 3.5%;
       margin-top: 0;
     }
   }
