--- a/src/Components/UI/Modal/_Modal.scss
+++ b/src/Components/UI/Modal/_Modal.scss
@@ -2,7 +2,7 @@
   top:0;
   position: fixed;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   z-index: 15;
   background-color: rgba(0, 0, 0, 0.67);
 }
