--- a/src/Styles/Style.scss
+++ b/src/Styles/Style.scss
@@ -16,3 +16,5 @@
 @import "../Components/UI/Modal/Modal";
 @import "../Components/Cart/SideCart";
 @import "../Components/Restaurants/RestaurantsPage";
+@import "./Animations";
+@import "animate.css/animate.min.css";
