--- a/src/Components/Cart/_SideCart.scss
+++ b/src/Components/Cart/_SideCart.scss
@@ -1,6 +1,5 @@
-.side_cart{
+.side_cart {
   box-sizing: border-box;
-  display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
@@ -10,14 +9,16 @@
   width: 497px;
   height: 586px;
   padding: 0 0 44px 0;
-  img{
+
+  img {
     position: absolute;
     left: 224px;
-    top:243px;
-    width: 49px ;
+    top: 243px;
+    width: 49px;
     opacity: 0.5;
   }
-  p{
+
+  p {
     position: absolute;
     left: 188px;
     bottom: 224px;
@@ -31,26 +32,43 @@
 
   }
 
-  @include mobile{
+  @include mobile {
     top: 64px;
     width: 100%;
     height: 218px;
-    img{
+    img {
       position: absolute;
       left: 167px;
-      top:63px;
-      width: 45px ;
+      top: 63px;
+      width: 45px;
       opacity: 0.5;
     }
-    p{
+    p {
       left: 117px;
       bottom: 45px;
       width: 145px;
       opacity: 0.5;
 
     }
-    .secondary_button{
+    .secondary_button {
       display: none;
     }
   }
 }
+
+.show_cart {
+  animation-name: cart_in;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+
+  z-index: 15;
+}
+
+.hide_cart {
+  animation-name: cart_out;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
