--- a/src/Components/Restaurants/_Restaurants.scss
+++ b/src/Components/Restaurants/_Restaurants.scss
@@ -1,9 +1,11 @@
+
 .restaurants_section {
   ul, li{
     list-style-type: none;
   }
   margin-top: 55px;
-  height: 555px;
+  //height: 555px;
+  height: 100%;
   justify-content: space-between;
   align-items: center;
   padding: 0;
