--- a/src/Styles/Style.css
+++ b/src/Styles/Style.css
@@ -1,3 +1,4 @@
+@import "animate.css/animate.min.css";
 .header h1 {
   font-weight: 200;
   font-size: 32px;
@@ -881,6 +882,9 @@
   border-bottom: 1.8px solid rgba(222, 146, 0, 0.9);
   transition-duration: 0.15s;
 }
+.navbar .left_nav .active_link {
+  border-bottom: 1.8px solid rgba(222, 146, 0, 0.9);
+}
 .navbar .right_nav {
   width: 50%;
   display: flex;
@@ -1438,7 +1442,7 @@
 
 .restaurants_section {
   margin-top: 55px;
-  height: 555px;
+  height: 100%;
   justify-content: space-between;
   align-items: center;
   padding: 0;
@@ -1705,9 +1709,22 @@
   z-index: 16;
 }
 
+.active_modal {
+  animation-name: modal_backdrop_in;
+  animation-iteration-count: 1;
+  animation-duration: 0.5s;
+}
+
+.inactive_modal {
+  animation-name: modal_backdrop_out;
+  animation-iteration-count: 1;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  z-index: -1;
+}
+
 .side_cart {
   box-sizing: border-box;
-  display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
@@ -1761,6 +1778,21 @@
   }
 }
 
+.show_cart {
+  animation-name: cart_in;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  z-index: 15;
+}
+
+.hide_cart {
+  animation-name: cart_out;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
 .restaurants_page {
   margin-top: 112px;
   align-items: center;
@@ -1810,6 +1842,7 @@
 }
 
 .all_restaurants {
+  width: 100%;
   padding: 0;
   margin-left: 6%;
   margin-right: 4%;
@@ -1823,6 +1856,47 @@
   float: left;
   padding-right: 1.5%;
   margin-bottom: 40px;
+}
+
+@keyframes cart_in {
+  0% {
+    opacity: 0;
+    transform: translateX(100%);
+    display: flex;
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+    display: flex;
+  }
+}
+@keyframes cart_out {
+  0% {
+    opacity: 1;
+    transform: translatex(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+}
+@keyframes modal_backdrop_in {
+  0% {
+    background-color: transparent;
+    opacity: 0;
+  }
+  100% {
+    background-color: rgba(0, 0, 0, 0.67);
+  }
+}
+@keyframes modal_backdrop_out {
+  0% {
+    background-color: rgba(0, 0, 0, 0.67);
+  }
+  100% {
+    background-color: transparent;
+    opacity: 0;
+  }
 }
 
 /*# sourceMappingURL=Style.css.map */
