--- a/src/Components/Dishes/_Dish.scss
+++ b/src/Components/Dishes/_Dish.scss
@@ -10,14 +10,14 @@
     width: inherit;
     height: $dishInfoHeight;
     justify-content: space-between;
-    align-items: center;
-    @include mobile{
-      align-items: flex-start;
-      padding-left: 16px;
+    align-items: flex-start;
+    padding-left: 16px;
+    gap: 8px;
+    @include desktop{
+      align-items: center;
+      padding: 24px 0 8px;
     }
     //align-self: stretch;
-    padding: 24px 0 8px;
-    gap: 8px;
 
     .dish_text{
       display: flex;
@@ -33,15 +33,15 @@
       }
       .dish_text_secondary {
         margin-top: -15px;
-        text-align: center;
-
-        @include mobile{
-          text-align: left;
-        }
+        text-align: left;
         font-size: $dishSecondaryFontSize;
         letter-spacing: 1.97px;
         font-weight: 200;
         padding: $dishSecondaryFontPadding;
+
+        @include desktop{
+          text-align: center;
+        }
       }
     }
     .dish_price {
@@ -50,18 +50,18 @@
       flex-direction: row;
       justify-content: flex-end;
       align-items: center;
-      width: 287px;
-      @include mobile{
-        width: auto;
+      width: auto;
+      @include desktop{
+        width: 287px;
       }
       height: 30px;
       .dish_text_price {
         display: flex;
         font-size: $dishSecondaryFontSize;
         letter-spacing: 1.97px;
-        font-weight: 200;
-        @include mobile{
-          font-weight: 400;
+        font-weight: 400;
+        @include desktop{
+          font-weight: 200;
         }
         gap: 4px;
       }
@@ -85,24 +85,35 @@
 }
 
 .dish_signature{
-  width: 380px;
-  height: 645px;
-  @include dishContent(364px, 40px, 24px, 0 55px 20px 55px, 0 30px, 112px);
-  @include mobile{
-    width: 245px;
-    height: 100%;
-    padding-left: 20px;
-    padding-right: 4px;
-    @include dishContent(236px, 18px, 16px, 0 0 20px 0, 0 0 0 0, 0);
+
+  width: 245px;
+  height: 100%;
+  @include dishContent(236px, 18px, 16px, 0 0 20px 0, 0 0 0 0, 0);
+  padding-left: 20px;
+  padding-right: 4px;
+
+  .dish_text{
+    align-items: flex-start;
+  }
+  .dish_price{
+    padding-bottom: 10px;
+  }
+
+  @include desktop{
+    width: 380px;
+    height: 645px;
+    //todo: check padding
+    padding: 0;
+    @include dishContent(364px, 40px, 24px, 0 55px 20px 55px, 0 30px, 112px);
     .dish_text{
+      //todo: what here?
       align-items: flex-start;
     }
     .dish_price{
-      padding-bottom: 10px;
+      //todo: check this
+      padding-bottom: 0;
     }
-
   }
-
   //.dish_image{
   //  width: 380px;
   //  height: 306px;
