--- a/src/Components/Dishes/_Dishes.scss
+++ b/src/Components/Dishes/_Dishes.scss
@@ -1,42 +1,50 @@
+//todo: check all this class
+
 .dishes_section {
-  margin-top: 55px;
-  height: 729px;
+  margin: 48px 0 0 0;
+
+  height: 100%;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   padding: 0;
   //gap: 40px;
-  margin-bottom: 97px;
   h2{
-    margin-bottom: 50px;
-  }
-  @include mobile{
-    align-items: flex-start;
-    h2{
-      display: flex;
-      padding-left: 20px;
-      margin-bottom: 8px;
-      height: 35px;
-      align-items: center;
+    display: flex;
+    padding-left: 20px;
+    margin-bottom: 8px;
+    height: 35px;
+    align-items: center;
+    @include desktop{
+      margin-bottom: 50px;
     }
-    height: 100%;
-    margin: 48px 0 0 0;
+  }
+  @include desktop{
+    align-items: center;
+    height: 729px;
+    margin-top: 55px;
+    margin-bottom: 97px;
+
+
   }
   .all_button{
     height: 35px;
     margin-top: 16px;
-    display: none;
-    @include mobile{
-      display: flex;
+    display: flex;
+
+    @include desktop{
+      display: none;
     }
   }
 }
 
 .dishes_card {
-  width: 82.25%;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
-  @include mobile{
-    overflow-x: scroll;
-    width: 100%;
+  overflow-x: scroll;
+
+  @include desktop{
+    //todo: what about overflow-x?
+    width: 82.25%;
   }
 }
