--- a/src/Components/Footer/_Footer.scss
+++ b/src/Components/Footer/_Footer.scss
@@ -1,22 +1,25 @@
 .footer {
-  height: 84px;
-  align-items: center;
+  height: 202px;
   //padding: 31px 397px;
   justify-content: space-around;
   width: 32%;
-  margin-left: 34%;
+  margin-left: 5%;
   margin-bottom: 20px;
+  flex-direction: column;
+  align-items: flex-start;
+
+
+  @include desktop{
+    flex-direction: row;
+    margin-left: 34%;
+    height: 84px;
+    align-items: center;
+
+  }
 
   NavLink, a {
     text-decoration: none;
     color: inherit;
-  }
-
-  @include mobile{
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 5%;
-    height: 202px;
   }
 
 
