--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -1,45 +1,52 @@
 .hero {
+  animation-name: headerIn;
+  animation-duration: 1s;
   margin-top: 64px;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 696px;
+  height: 273px;
   background-image: url("../../public/Images/hero.png");
   background-size: cover;
-  @include mobile{
-    background-size: cover;
-    height: 273px;
+  @include desktop {
+    height: 696px;
   }
 }
 
-.main_header{
+.main_header {
+  animation-name: zoomIn;
+  animation-duration: 1s;
   //justify-content: space-evenly;
   align-items: center;
   display: flex;
-  width: 36.25%;
-  height: 227px;
-  padding: 8.25px 8.85%;
-  background: rgba(255, 255, 255, 0.88);
+  width: 71.6%;
 
-  h1{
-    margin-top: 7%;
-    width:404px;
-    line-height: 40px;
-    margin-bottom: 3%;
+  height: 144px;
+  padding-top: 0;
+  padding-bottom: 0;
+  background: rgba(255, 255, 255, 0.88);
+  justify-content: space-around;
+  @include desktop {
+    width: 36.25%;
+    height: 227px;
+    padding: 8.25px 8.85%;
+    //todo: check the justify content
+    justify-content: flex-start;
   }
 
-  @include mobile{
-    width: 71.6%;
-    height: 144px;
-    padding-top: 0;
-    padding-bottom: 0;
-    justify-content: space-around;
-    h1{
-      text-align: center;
-      width: 320px;
-      font-size: 24px;
-      margin-top: -3px;
-      margin-bottom: 30px;
+  h1 {
+    text-align: center;
+    width: 320px;
+    font-size: 24px;
+    margin-top: -3px;
+    margin-bottom: 30px;
+    @include desktop{
+      margin-top: 7%;
+      width: 404px;
+      line-height: 40px;
+      margin-bottom: 3%;
+      //todo: check the props from here
+      text-align: inherit;
     }
   }
 }
