--- a/src/Styles/Style.scss
+++ b/src/Styles/Style.scss
@@ -18,3 +18,5 @@
 @import "../Components/Restaurants/RestaurantsPage";
 @import "./Animations";
 @import "animate.css/animate.min.css";
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
