--- a/src/Styles/_GlobalStyles.scss
+++ b/src/Styles/_GlobalStyles.scss
@@ -8,43 +8,47 @@ $secondary-color3: #FAFAFA;
   @media screen and (max-width: 600px) {@content}
 };
 
+@mixin desktop{
+  @media screen and (min-width: 600px) {@content}
+};
+
 .header {
 
   h1 {
     font-weight: 200;
-    font-size: 32px;
+    font-size: 24px;
     letter-spacing: 1.97px;
-    @include mobile{
-      font-size: 24px;
+    @include desktop{
+      font-size: 32px;
     }
   }
 
   h2 {
     font-weight: 200;
-    font-size: 30px;
+    font-size: 16px;
     letter-spacing: 1.25px;
     text-transform: uppercase;
-    @include mobile{
-      font-size: 16px;
+    @include desktop{
+      font-size: 30px;
     }
   }
 
   h3{
-    font-size: 40px;
+    font-size: 18px;
     font-weight: 400;
     letter-spacing: 2.67px;
-    @include mobile{
-      font-size: 18px;
+    @include desktop{
+      font-size: 40px;
     }
   }
 }
 
 .body_text{
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 200;
   letter-spacing: 1.97px;
-  @include mobile{
-    font-size: 16px;
+  @include desktop{
+    font-size: 24px;
   }
 }
 
